<resources>
    <string name="app_name">Class Management</string>
    <string name="hello">Hello.</string>
    <string name="let_s_get_started">Create An Account</string>
    <string name="email_id">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Nếu bạn đã có tài khoản? </string>
    <string name="login_btn">Login</string>
    <string name="text_nhapCodeTuyY">Enter any word you want to set as the code</string>
    <string name="text_questionAccount">If you already have an account</string>
    <string name="text_name">Full name</string>
    <string name="text_id">Id</string>
    <string name="text_phoneNumber">Phone Number</string>
    <string name="text_subjectClass">Subject</string>
    <string name="text_delete">Delete</string>
    <string name="text_dienThongTin">Enter your information</string>
    <string name="text_fullName">Full Name</string>
    <string name="text_save">Save</string>
    <string name="text_welcomeBack">Hello welcome back</string>
    <string name="login_text_btn">Login</string>
    <string name="text_banChuaCotaiKhoan">Do not have an account? </string>
    <string name="text_createAccount">Create Account</string>
    <string name="chooseSubject_main_text">Choose your class</string>
    <string name="mobile_nameSubject">Mobile Application Programming</string>
    <string name="nameSubject_ComputerNetwork">Computer Network</string>
    <string name="text_SoDoLop">Click the checkin button to take attendance</string>
    <string name="text_OptionLogin">Select user mode</string>
    <string name="text_student">Student</string>
    <string name="text_Teacher">Teacher</string>
    <string name="text_nhapCodeSinhVien">Please enter the code today to take attendance</string>
    <string name="text_nhapCodeThaygiao">Please enter the teacher verification code</string>
    <string name="text_listStudent">List of students</string>
    <string name="text_soluongSinhvien">Amount: </string>
    <string name="language_text">Language</string>
    <string name="manualCode_btn">Manual generation</string>
    <string name="automaticGenCode_btn">Auto </string>
    <string name="dailycode_text">Today\'s code is:</string>
    <string name="logout">Logout</string>
    <string name="setUpTimeCloseDoor_btn">Set closing time</string>
    <string name="success_message">Successfully</string>
    <string name="toast_setUpSucssesful">Successfully installed the code for today\'s lesson!</string>
    <string name="toast_todayCodeIs">The code for today\' lesson is:</string>
    <string name="toast_ClosingTimeIS">Time closing is: </string>
    <string name="toast_CreateAccountSuccess">Successfully created an account, check your email to verify your account</string>
    <string name="Error_Email">Invalid email</string>
    <string name="Error_lengthPassword">The length of the password must be >6</string>
    <string name="Error_passwordNotMatch">Two passwords do not match</string>
    <string name="Error_compulsory">Compulsory</string>
    <string name="toast_EmailNotVerify">Email is not verified, please check your email for verification</string>
    <string name="toast_welcomeTeacher">Welcome Mr. Tuan</string>
    <string name="toast_youAreNotTeacher">You are not Mr. Tuan</string>
    <string name="toast_welcomeToClass">Welcome to the classroom</string>
    <string name="toast_dailyCodeIncorrect">Wrong daily code please re-enter</string>
    <string name="toast_bugInTakeDailycode">Error in the process of getting the code every day</string>
    <string name="title_Notification">Notification!</string>
    <string name="title_QuestionBeforeDelete">Do you want to delete this student record?</string>
    <string name="title_no">No</string>
    <string name="title_yes">Yes</string>
    <string name="toast_saveSuccessful">Save successfully</string>
    <string name="title_activity_class_et4710_test">ClassET4710_test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Information</string>
    <string name="text_fullname">Full Name</string>
    <string name="student_id_tv">Student Id</string>
    <string name="phone_number_Tv">Phone Number</string>
    <string name="tienTrinhHocTap">Learning progress</string>
    <string name="s_bu_i_v_ng">Number of Absences:</string>
    <string name="i_m_gi_a_k">Midterm score:</string>
    <string name="i_m_cu_i_k">Final Score:</string>
    <string name="giao_di_n_th_y_gi_o">Teacher\'s interface</string>
    <string name="class_closing_time_is">Class closing time is:</string>
    <string name="checkin_th_nh_c_ng_l_c">CheckIn is successful at</string>
    <string name="week_1">Week 1</string>
    <string name="week_2">Week 2</string>
    <string name="week_3">Week 3</string>
    <string name="week_4">Week 4</string>
    <string name="week_5">Week 5</string>
    <string name="week_6">Week 6</string>
    <string name="week_7">Week 7</string>
    <string name="week_8">Week 8</string>
    <string name="week_9">Week 9</string>
    <string name="week_10">Week 10</string>
    <string name="week_11">Week 11</string>
    <string name="week_12">Week 12</string>
    <string name="week_13">Week 13</string>
    <string name="week_14">Week 14</string>
    <string name="week_15">Week 15</string>
    <string name="week_16">Week 16</string>
    <string name="title_nhom10">Group 10</string>
    <string name="quanLylopHoc">Class Management</string>
</resources>