<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="32dp"
    android:layout_marginVertical="16dp"
    tools:context=".controller.UI.loginAndCreate.CreateAccountActivity">

    <ImageView
        android:id="@+id/signIn_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/create_icon" />
    <TextView
        android:id="@+id/title_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_createAccount"
        android:layout_below="@id/signIn_icon"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <LinearLayout
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signIn_icon"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_create"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signIn_FullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundeditext"
            android:hint="@string/text_fullname"
            android:inputType="text"
            android:padding="16dp"
            android:layout_marginVertical="5dp"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/signIn_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundeditext"
            android:hint="@string/student_id_tv"
            android:inputType="number"
            android:padding="16dp"
            android:textSize="20sp" />
        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/signIn_PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundeditext"
            android:hint="@string/phone_number_Tv"
            android:inputType="number"
            android:padding="16dp"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/signIn_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundeditext"
            android:hint="@string/email_id"
            android:layout_marginVertical="5dp"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/signIn_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundeditext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/signIn_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/backgroundeditext"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/create_account_btn"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/backgroundeditext"
            android:text="@string/create_account" />
        <ProgressBar
            android:id="@+id/signIn_progress_bar"
            android:layout_marginTop="15dp"
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:visibility="gone"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_questionAccount" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="10dp"
            android:id="@+id/login_Text_view_btn"
            android:text="@string/login_btn"/>

    </LinearLayout>
</RelativeLayout>