<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".model.InformationStudentActivity">
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/tv_nameForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_dienThongTin"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"/>
    <EditText
        android:id="@+id/name_student"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_nameForm"
        android:hint="@string/text_fullName"
        android:padding="15dp"
        android:background="@drawable/rounder_background"/>
    <EditText
        android:id="@+id/id_student"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_student"
        android:hint="@string/text_id"
        android:inputType="number"
        android:padding="15dp"
        android:background="@drawable/rounder_background"/>
    <EditText
        android:id="@+id/phoneNumber_student"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_student"
        android:hint="@string/text_phoneNumber"
        android:inputType="number"
        android:padding="15dp"
        android:background="@drawable/rounder_background"/>


    <Button
        android:layout_marginTop="30dp"
        android:text="@string/text_save"
        android:id="@+id/save_btn"
        android:layout_centerHorizontal="true"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:background="@drawable/rounder_background"
        android:layout_below="@id/phoneNumber_student"/>
    <ProgressBar
        android:id="@+id/progress_bar2"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:visibility="gone"
        android:layout_below="@id/save_btn"/>
</RelativeLayout>