<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    android:background="@drawable/background"
    tools:context=".controller.UI.ET4710.Class_ET4710_Admin">
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/Name_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/giao_di_n_th_y_gi_o"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:id="@+id/linear_btn"
        android:layout_below="@id/Name_class"
        android:orientation="horizontal">

        <Button

            android:id="@+id/setUp_daily_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/manualCode_btn"/>
        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:onClick="autoGenCode"
            android:text="@string/automaticGenCode_btn"/>
    </LinearLayout>
    <LinearLayout

        android:id="@+id/frame_setUpTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/linear_btn"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="setUpTimeClosing"
            android:text="@string/setUpTimeCloseDoor_btn"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:layout_marginTop="70dp"
        android:text="@string/dailycode_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:id="@+id/dailyCode_tv"
        android:layout_below="@id/frame_setUpTime"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/class_closing_time_is"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/timeClosing_edt"
        android:layout_below="@id/dailyCode_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="top"
        android:background="@drawable/ic_baseline_sensor_door_24"
        android:textColor="#C81515" />
    <TextView
        android:id="@+id/table"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:onClick="openListStudent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/table" />
        <ProgressBar
            android:id="@+id/progress_bar_loadCode"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/frame_setUpTime"/>

</RelativeLayout>