<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".model.DetailInformationActivity">


    <RelativeLayout
        android:id="@+id/frame_title"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroundeditext">
        <ImageView
            android:id="@+id/detail_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="1dp"
            android:src="@drawable/avatar_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/detail_avatar"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="Email"
                android:autoLink="email"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="12dp"
        android:id="@+id/mssv"
        android:background="@drawable/backgroundeditext"
        android:layout_below="@id/frame_title"
        android:orientation="vertical">
        <TextView
            android:id="@+id/detail_title_mssv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:text="@string/text_id"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/detail_mssv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:text="@string/text_id"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:background="@drawable/backgroundeditext"
        android:layout_below="@id/mssv"
        android:orientation="vertical">
        <TextView
            android:id="@+id/detail_title_sdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/text_phoneNumber"
            android:textSize="15sp" />
        <TextView
            android:layout_below="@id/detail_title_sdt"
            android:id="@+id/detail_sdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_phoneNumber"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="20sp" />
        <ImageView
            android:id="@+id/make_message_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:onClick="makeAMessage"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_baseline_message_24"/>

        <ImageView
            android:id="@+id/make_phoneCall_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/make_message_imageview"
            android:layout_alignParentEnd="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:onClick="makeAPhoneCall"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_call_24" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        android:background="@drawable/backgroundeditext"
        android:layout_below="@id/process_frame"
        android:orientation="vertical">
        <TextView
            android:id="@+id/detail_title_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:text="@string/text_subjectClass"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/detail_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:text="Lập trình moblie ET4710-137364"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/process_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        android:background="@drawable/backgroundeditext"
        android:layout_below="@id/phoneNumber"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/detail_process"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="Tiến trình học tập"
                android:textSize="15sp" />
            <ImageButton
                android:id="@+id/detail_save_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded_background_tealgreen"
                android:layout_gravity="bottom|end"
                android:src="@drawable/ic_baseline_done_24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/countAbsent_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/detail_absentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Số Buổi vắng:"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/detail_absent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/score_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/detail_midtermScoreTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="Điểm giữa kì:"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/detail_midTermScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginLeft="10dp"
                android:minWidth="48dp"
                android:text="0"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView

                android:id="@+id/detail_finalTermScoreTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="Điểm Cuối kì:"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/detail_finalTermScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginLeft="10dp"
                android:minWidth="48dp"
                android:text="0"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/detail_delete_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/text_delete"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#C31D1D"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>